docs: change description of landing page

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: The Missing Standard Library for the Web
-description: The Missing Standard Library for the Web.
+description: UI Development with latest Web Technologies
 template: splash
 hero:
   tagline: UI Development with latest Web Technologies
