--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -18,19 +18,16 @@ hero:
 
 import { Card, CardGrid } from '@astrojs/starlight/components';
 
-## Next steps
-
 <CardGrid stagger>
-	<Card title="Update content" icon="pencil">
-		Edit `src/content/docs/index.mdx` to see this page change.
-	</Card>
-	<Card title="Add new content" icon="add-document">
-		Add Markdown or MDX files to `src/content/docs` to create new pages.
-	</Card>
-	<Card title="Configure your site" icon="setting">
-		Edit your `sidebar` and other config in `astro.config.mjs`.
-	</Card>
-	<Card title="Read the docs" icon="open-book">
-		Learn more in [the Starlight Docs](https://starlight.astro.build/).
-	</Card>
+  <Card title="Javascript Utilities" icon="seti:javascript">
+    Increase the expressiveness of your code
+  </Card>
+
+  <Card title="Agnostic Custom Elements" icon="seti:html">
+    Less time and development costs using predefined components
+  </Card>
+
+  <Card title="CSS Utilities" icon="seti:css">
+    Reduction of the styling overhead in an expressive way
+  </Card>
 </CardGrid>
