xylit.dev becomes the documentation for xylit ssg

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,33 +1,71 @@
 ---
-title: The Missing Standard Library for the Web
-description: UI Development with latest Web Technologies
+title: Xylit SSG - A Powerful Static Site Generator
+description: Xylit SSG - A Node.js based Static Site Generator
 template: splash
 hero:
-  tagline: UI Development with latest Web Technologies
+  tagline: '&hellip;The Less Bloated &amp; More Straightforward Generator.'
   image:
     file: ../../../public/logo.svg
   actions:
-    - text: Example Guide
-      link: /guides/example/
+    - text: Getting Started
+      link: /getting-started/installation-and-setup
       icon: right-arrow
       variant: primary
-    - text: Read the Starlight docs
-      link: https://starlight.astro.build
+    - text: View on GitHub
+      link: https://github.com/xylitdev/xylit-ssg
       icon: external
+      variant: minimal
 ---
 
 import { Card, CardGrid } from '@astrojs/starlight/components';
 
 <CardGrid stagger>
-  <Card title="Javascript Utilities" icon="seti:javascript">
-    Increase the expressiveness of your code
+  <Card title="Expressive Syntax" icon="seti:html">
+    Xylit heavily relies on tagged template literals, which makes composing differend DSL's a breeze:
+
+    <ul>
+      <li>No Need for hacky Markdown or YAML injections!</li>
+      <li>No need for learning a new Template Language!</li>
+    </ul>
   </Card>
 
-  <Card title="Agnostic Custom Elements" icon="seti:html">
-    Less time and development costs using predefined components
+  <Card title="Component-Driven Templating" icon="seti:c">
+    Reuse parts of your code in form of components:
+
+    <ul>
+      <li>Properties Support</li>
+      <li>Named Slot Support</li>
+      <li>Scoped Slot Support</li>
+    </ul>
   </Card>
 
-  <Card title="CSS Utilities" icon="seti:css">
-    Reduction of the styling overhead in an expressive way
+  <Card title="Flexible Styling" icon="seti:css">
+    A Component-Driven approach requires a powerful styling toolset.
+    Xylit's Out of the Box Support:
+
+    <ul>
+      <li>Sass & Less preprocessing</li>
+      <li>CSS Modules</li>
+      <li>Scoped CSS</li>
+    </ul>
+  </Card>
+
+  <Card title="File-Based Routing" icon="forward-slash">
+    Xylit ships with a file-based routing system. 
+    When a Xylit-file is added to the project it's automatically available as a route.
+  </Card>
+
+  <Card title="DevServer & Livereload" icon="node">
+    Xylit comes with e built-in DevServer & supports live reloading.
+  </Card>
+
+   <Card title="Agnostic Project Structure" icon="seti:folder">
+    Many generators require a specific project structure.  
+    However, Xylit is able to align with your project structure.
+  </Card>
+
+  <Card title="Zero JavaSript Builds" icon="seti:javascript">
+    Templates are processed during the build time. 
+    Xylit does not generate any JavaScript by itself.
   </Card>
 </CardGrid>
